plugins {
    id 'java'
    id 'net.minecraftforge.gradle' version '5.1.+'
    id("io.github.themrmilchmann.curseforge-publish") version "0.8.0"
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.ALL
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    maven { url = 'https://maven.minecraftforge.net/' }
}

base {
    archivesName = mod_id
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${Forge_version}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'official', version: '1.20.1'
    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'SCAN,REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            args '--username', 'Dev'
        }
        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'SCAN,REGISTRIES'
            property 'forge.logging.console.level', 'debug'
        }
        data {
            workingDirectory project.file('run')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath()
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }


// Example configuration to allow publishing using the maven-publish plugin
curseforge {
    apiToken = providers.gradleProperty("cf_api_token")
    publications {
        register("curseForge") {
            projectId = "349327"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}
tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            mod_version: mod_version
    ]
    inputs.properties replaceProperties
    filesMatching('META-INF/mods.toml') {
        expand replaceProperties
    }
}